@@ -161,7 +161,7 @@ public class GL3DCameraOptionsPanel extends JPanel {
         fovPanel.setLayout(new BoxLayout(fovPanel, BoxLayout.LINE_AXIS));
         fovPanel.add(new JLabel("FOV angle"));
         fovSpinner = new JSpinner();
-        fovSpinner.setModel(new SpinnerNumberModel(new Double(0.8), new Double(min), new Double(max), new Double(0.01)));
+        fovSpinner.setModel(new SpinnerNumberModel(Double.valueOf(0.8), Double.valueOf(min), Double.valueOf(max), Double.valueOf(0.01)));
         JFormattedTextField f = ((JSpinner.DefaultEditor) fovSpinner.getEditor()).getTextField();
         f.setFormatterFactory(new DegreeFormatterFactory("%.2f\u00B0", min, max));
 
